[package]
name = "bevy_wasm_touch_fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_input = "0.12.0"
bevy_ecs = "0.12.0"
bevy_math = "0.12.0"
bevy_app = "0.12.0"
bevy_log = "0.12.0"

web-sys = { version = "0.3.65", features = ["Document", "Element", "HtmlElement", "Node", "Window", "DomRect"]}

[dev-dependencies]
bevy = "0.12.0"
